# ublk-azblob

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE.md  README.md  todo.md
.github/workflows/: bench.yml  chart-release.yml  ci.yml  docker.yml  e2e.yml  k8s-e2e.yml  release.yml
deploy/: Dockerfile  artifacthub-repo.yml
deploy/chart/: Chart.yaml  README.md  values.yaml
deploy/chart/examples/: values-nbd.yaml
deploy/chart/templates/: NOTES.txt  _helpers.tpl  controller.yaml  csi-driver.yaml  node.yaml  rbac.yaml  secret.yaml  storageclass.yaml
deploy/example/: pod.yaml  pvc.yaml
deploy/kubernetes/: controller.yaml  csi-driver.yaml  node.yaml  rbac.yaml  storageclass.yaml
docs/: cluster-testing.md
examples/quickstart/: .gitignore  README.md  docker-compose.yml  mount-demo.sh
scripts/: README.md  import-folder.sh
tests/bench/: Dockerfile  bench.sh  docker-compose.yml
tests/e2e/: Dockerfile  docker-compose.yml  mount_test.sh  run_e2e.sh
tests/e2e/csi/: controller_test.sh
tests/e2e/k8s/: Dockerfile  azurite.yaml  docker-compose.yml  e2e.values.yaml  kind-config.yaml  reader.yaml  run.sh  writer.yaml
ublk-azblob/: Cargo.toml  build.rs
ublk-azblob/src/: auth.rs  bench.rs  blob_url.rs  bloburl.rs  cli.rs  import.rs  lib.rs  main.rs  nbd_target.rs  ublk_target.rs
ublk-azblob/src/backend/: azure.rs  buffered.rs  cache_budget.rs  cache_index.rs  cache_lru.rs  file.rs  io_gateway.rs  mem.rs  mod.rs
ublk-azblob/src/coordination/: k8s.rs  mod.rs
ublk-azblob/src/csi/: controller.rs  identity.rs  mod.rs  mount.rs  node.rs  state.rs
ublk-azblob/tests/: csi_controller_e2e.rs  k8s_pvc_e2e.rs  mount_e2e.rs  nbd_e2e.rs
