[package]
name = "ublk-azblob"
version = "0.1.0"
edition = "2021"
description = "Linux ublk userspace block device backed by Azure Page Blob"
license = "MIT"
repository = "https://github.com/tg123/ublk-azblob"

# Build script: generates Rust bindings from the vendored CSI proto, but only
# when the `csi` feature is enabled (so the default build needs no `protoc`).
build = "build.rs"

[[bin]]
name = "ublk-azblob"
path = "src/main.rs"

[dependencies]
# Azure SDK — pinned exact versions; the SDK is 0.x/preview and API churn is expected.
# Wrap all SDK types behind BlobBackend trait so SDK upgrades don't ripple into the I/O loop.
azure_core = "1.0.0"
azure_storage_blob = "1.0.0"
azure_identity = "1.0.0"

# Async runtime
tokio = { version = "1.52.3", features = ["full"] }

# Async traits
async-trait = "0.1.89"

# Byte buffers
bytes = "1.11.1"

# Error handling
anyhow = "1.0.102"

# CLI argument parsing
clap = { version = "4.6.1", features = ["derive", "env"] }

# Logging / tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# HMAC-SHA256 for Azure Storage SharedKey authentication (Azurite / account-key mode)
hmac-sha256 = "1.1.14"

# Base64 encoding for SharedKey auth and HMAC digests
base64 = "0.22.1"

# Time handling (for x-ms-date header in SharedKey auth)
time = { version = "0.3", features = ["formatting", "macros"] }

# ublk Rust binding — Linux userspace block driver over io_uring.
# Requires Linux ≥6.0 with ublk_drv loaded and root/CAP_SYS_ADMIN.
# The ublk target is conditionally compiled; set UBLK_AVAILABLE=1 or use the
# --features ublk flag.  Without it, the I/O loop is stubbed with TODOs.
libublk = { version = "0.4.6", optional = true }

# Raw libc bindings — only needed by the ublk I/O loop (errno constants, signals).
libc = { version = "0.2.186", optional = true }

# ── CSI (Kubernetes PersistentVolume) driver ────────────────────────────────
# Gated behind the `csi` feature.  Pulls in a gRPC stack (tonic/prost) used to
# implement the Container Storage Interface so a Kubernetes PVC can be backed by
# a ublk Azure Page Blob device.  Requires `protoc` at build time.
tonic = { version = "0.12.3", optional = true }
prost = { version = "0.13.4", optional = true }
prost-types = { version = "0.13.4", optional = true }
tokio-stream = { version = "0.1.17", features = ["net"], optional = true }

# ── Cluster coordination (Kubernetes Lease) ─────────────────────────────────
# Gated behind the `coordination` feature.  The Azure blob-lease half of the
# coordinator uses the always-present azure_storage_blob SDK; the cluster-lease
# half talks to the Kubernetes `coordination.k8s.io` API via `kube`.
kube = { version = "0.99.0", default-features = false, features = ["client", "rustls-tls"], optional = true }
k8s-openapi = { version = "0.24.0", features = ["latest"], optional = true }

[build-dependencies]
# Only used when the `csi` feature is enabled (build.rs checks CARGO_FEATURE_CSI).
tonic-build = "0.12.3"

[features]
# Enable the real ublk target (requires Linux ≥6.0 + ublk_drv loaded).
ublk = ["dep:libublk", "dep:libc"]

# Enable the `bench` subcommand (backend throughput/IOPS/latency benchmark).
# Off by default so the benchmark code is not shipped in the release binary.
bench = []

# Enable cluster coordination (Kubernetes coordination.k8s.io Lease + Azure blob
# lease) so that at most one node mounts a given page blob at a time.  The Azure
# blob-lease half is always compiled; this feature adds the Kubernetes client.
coordination = ["dep:kube", "dep:k8s-openapi"]

# Enable the Kubernetes CSI driver (`csi` subcommand).  The node side also needs
# the `ublk` feature to actually attach block devices; enable both together with
# `--features "ublk csi"` for a fully functional node plugin.  CSI implies
# `coordination` so node mounts are guarded by the cluster + blob locks.
csi = ["dep:tonic", "dep:prost", "dep:prost-types", "dep:tokio-stream", "dep:libc", "coordination"]

[dev-dependencies]
tokio = { version = "1.52.3", features = ["full", "test-util"] }

# Used by the Rust mount e2e test (tests/mount_e2e.rs): SHA-256 checksums of the
# random files, and signals (SIGUSR1/SIGINT) to the ublk device child process.
hmac-sha256 = "1.1.14"
libc = "0.2.186"
